syntax = "proto3";

option csharp_namespace = "gRPC.Infrastructure.Protos.product";

//import "Domain/Protos/product.proto";

service Product {
	rpc ReadProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
	int32 id = 1;
}

message ProductResponse {
	int32 id = 1;
	string productName = 2;
	string productDescription = 3;
	string ProductType = 4;
	int32 quantity = 5;
	float unitPrice = 6;
	string vendor = 7;
}